--- a/1.html
+++ b/1.html
@@ -9,7 +9,7 @@
 		<style>
 			* {padding: 0; margin: 0;  font-family: 'Teko', sans-serif; }
 			ul,ol {list-style: none;}
-
+			a {text-decoration: none; color: white; }
 			.sec0 {width:100%; height:1080px; background: url(./images/b1.jpg) no-repeat 50% 50%; background-size:  cover; position: relative; }
 			.sec1 {width:100%; height:1080px; background: url(./images/b2.jpg) no-repeat 50% 50%; background-size:  cover; position: relative; top:150px; }
 			.sec2 {width:100%; height:1080px; background: url(./images/b3.jpg) no-repeat 50% 50%; background-size:  cover; position: relative; top: 300px; }
@@ -56,9 +56,9 @@
 		<section class="sec0">
 			<nav class="gnb">
 				<img class="m0" src="./images/m0.png">
-				<img class="logo" src="./images/logo.png">
+				<a href="index.html"><img class="logo" src="./images/logo.png"></a>
 				<ul >
-					<li>Peterbilt379</li>
+					<a href="1.html"><li>Peterbilt379</li></a>
 					<li>Marmon Semi</li>
 					<li>Western Star 5700XE</li>
 				</ul>
