--- a/1.html
+++ b/1.html
@@ -80,11 +80,11 @@
 		</section>
 		<section class="sec1">
 			<div class="textwrap1">His History</div>
-				<div class="h1"><img src="./images/h1.png"></div>
-				<div class="h2"><img src="./images/h2.png"></div>
-				<div class="h3"><img src="./images/h3.png"></div>
-				<div class="h4"><img src="./images/h4.png"></div>
-				<div class="h5"><img src="./images/h5.png"></div>
+				<div class="h1"><img src="./images/h1.PNG"></div>
+				<div class="h2"><img src="./images/h2.PNG"></div>
+				<div class="h3"><img src="./images/h3.PNG"></div>
+				<div class="h4"><img src="./images/h4.PNG"></div>
+				<div class="h5"><img src="./images/h5.PNG"></div>
 		</section>
 		<section class="sec2">
 			<div class="textwrap2">His Performance</div>
